tdf#151114: Fix swapped width and height

Regression from:
commit 0483fbd1d05d74c394d9274bdee77b3b2aebb495
Author: Khaled Hosny <khaled@aliftype.com>
Date:   Sun Aug 21 01:49:57 2022 +0200

    tdf#87535: Preview styles using CTL/CJK fonts in the sidebar

Change-Id: I9108e2efa75eafe56c3ccc8ec2fff81b8cf7dc4c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140551
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@aliftype.com>